added logprob gpt code and updated logprob llama code

--- a/code/prompting-logprob.ipynb
+++ b/code/prompting-logprob.ipynb
@@ -2,19 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\CS_programs\\Python\\LLM_Logic\\.env\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from minicons import scorer\n",
     "import pandas as pd\n",
     "import random\n",
-    "from transformers import AutoModelForCausalLM, AutoTokenizer"
+    "from transformers import AutoModelForCausalLM, AutoTokenizer, LlamaForCausalLM, LlamaTokenizer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -38,6 +47,13 @@
     "  gpt2 = AutoModelForCausalLM.from_pretrained('gpt2-large', return_dict=True)\n",
     "  gpt2_tokenizer = AutoTokenizer.from_pretrained('gpt2-large', use_fast=True)\n",
     "  model = scorer.IncrementalLMScorer(gpt2, tokenizer=gpt2_tokenizer, device='cpu')\n",
+    "\n",
+    "  # LLAMA Models\n",
+    "  # model_id = \"meta-llama/Meta-Llama-3.1-8B-Instruct\"\n",
+    "  # llama_tokenizer = LlamaTokenizer.from_pretrained(model_id)\n",
+    "  # llama_model = LlamaForCausalLM.from_pretrained(model_id, torch_dtype=torch.bfloat16)\n",
+    "  # model = scorer.IncrementalLMScorer(llama_model, tokenizer=llama_tokenizer, device='cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "\n",
     "  # model = scorer.IncrementalLMScorer('gpt2-large', 'cpu')\n",
     "  # model = scorer.IncrementalLMScorer('roberta-base', 'cpu')\n",
     "  # model = scorer.IncrementalLMScorer('xlnet-base-cased', 'cpu')\n",
@@ -48,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -99,17 +115,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "If I remember correctly, John doesn’t drink wine or beer.  I don’t know which.\n",
-      "If I remember correctly, John doesn’t drink wine or beer.  The doctor has forbidden him alcohol.\n",
-      "NAND: -3.990891933441162 NOR: -4.757718563079834\n",
-      "First sequence makes more sense.\n",
       "John is upset. Clearly, he didn’t pass the semantics or the syntax exam.  I wonder which it was.\n",
       "John is upset. Clearly, he didn’t pass the semantics or the syntax exam.  And it wouldn’t be the first time he failed those classes.\n",
       "NAND: -5.196961879730225 NOR: -4.064774513244629\n",
@@ -118,29 +130,33 @@
       "Few people took the appetizer or the dessert. The main dish was already expensive.\n",
       "NAND: -4.566789627075195 NOR: -3.7595956325531006\n",
       "Second sequence makes more sense.\n",
-      "Peter told me he needed to travel light. To judge by the small size of his bag, he was travelling without his computer or his movie camera.  I wonder which of the two he decided to give up.\n",
-      "Peter told me he needed to travel light. To judge by the small size of his bag, he was travelling without his computer or his movie camera.  I am sure he was a lot happier without electronic devices.\n",
-      "NAND: -3.583770275115967 NOR: -3.592984914779663\n",
-      "First sequence makes more sense.\n",
-      "My grandmother made these cookies without rum or cinnamon. I can’t remember which.\n",
-      "My grandmother made these cookies without rum or cinnamon. Instead of those ingredients she added homemade brandy.\n",
-      "NAND: -4.986001968383789 NOR: -4.286540985107422\n",
-      "Second sequence makes more sense.\n",
-      "Apparently, few people are able to recite back a sequence of twelve letters or twelve numbers. I don’t remember which.\n",
-      "Apparently, few people are able to recite back a sequence of twelve letters or twelve numbers. The limit is usually ten.\n",
-      "NAND: -4.429683685302734 NOR: -3.7345149517059326\n",
-      "Second sequence makes more sense.\n",
-      "Kate used to live without coffee or chocolate. I don't remember which.\n",
-      "Kate used to live without coffee or chocolate. Now she cannot imagine her life without them.\n",
-      "NAND: -3.842899799346924 NOR: -3.2528533935546875\n",
-      "Second sequence makes more sense.\n",
       "It seems John has lived here for years without medical or house insurance. I don’t remember which one.\n",
       "It seems John has lived here for years without medical or house insurance. Only now has it occurred to him that he needs both of them.\n",
       "NAND: -4.849876403808594 NOR: -3.616981267929077\n",
       "Second sequence makes more sense.\n",
+      "My grandmother made these cookies without rum or cinnamon. I can’t remember which.\n",
+      "My grandmother made these cookies without rum or cinnamon. Instead of those ingredients she added homemade brandy.\n",
+      "NAND: -4.986001968383789 NOR: -4.286540985107422\n",
+      "Second sequence makes more sense.\n",
       "If I remember correctly, Mary didn’t invite John or Suzi to her birthday party. I don’t know which of them.\n",
       "If I remember correctly, Mary didn’t invite John or Suzi to her birthday party. She’s upset with both of them and doesn’t want to see them.\n",
       "NAND: -3.6853291988372803 NOR: -3.1471445560455322\n",
+      "Second sequence makes more sense.\n",
+      "If I remember correctly, John doesn’t drink wine or beer.  I don’t know which.\n",
+      "If I remember correctly, John doesn’t drink wine or beer.  The doctor has forbidden him alcohol.\n",
+      "NAND: -3.990891933441162 NOR: -4.757718563079834\n",
+      "First sequence makes more sense.\n",
+      "Kate used to live without coffee or chocolate. I don't remember which.\n",
+      "Kate used to live without coffee or chocolate. Now she cannot imagine her life without them.\n",
+      "NAND: -3.842899799346924 NOR: -3.2528533935546875\n",
+      "Second sequence makes more sense.\n",
+      "Peter told me he needed to travel light. To judge by the small size of his bag, he was travelling without his computer or his movie camera.  I wonder which of the two he decided to give up.\n",
+      "Peter told me he needed to travel light. To judge by the small size of his bag, he was travelling without his computer or his movie camera.  I am sure he was a lot happier without electronic devices.\n",
+      "NAND: -3.583770275115967 NOR: -3.592984914779663\n",
+      "First sequence makes more sense.\n",
+      "Apparently, few people are able to recite back a sequence of twelve letters or twelve numbers. I don’t remember which.\n",
+      "Apparently, few people are able to recite back a sequence of twelve letters or twelve numbers. The limit is usually ten.\n",
+      "NAND: -4.429683685302734 NOR: -3.7345149517059326\n",
       "Second sequence makes more sense.\n",
       "It’s cold in this house. I bet you, John didn’t close the window or the back door.  I wonder which one of those two we’ll find open.\n",
       "It’s cold in this house. I bet you, John didn’t close the window or the back door.  Look, just as I said, both of them are wide open!\n",
@@ -189,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -220,8 +236,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".env",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
