--- a/code/transformer-prompting.ipynb
+++ b/code/transformer-prompting.ipynb
@@ -2,50 +2,90 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Carson\\AppData\\Local\\Temp\\ipykernel_1396\\567095396.py:1: DeprecationWarning: \n",
-      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
-      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
-      "but was not found to be installed on your system.\n",
-      "If this would cause problems for you,\n",
-      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
-      "        \n",
-      "  import pandas as pd\n"
-     ]
-    },
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'transformers'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mrandom\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtorch\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtransformers\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m LlamaForCausalLM, LlamaTokenizer, pipeline\n\u001b[0;32m      6\u001b[0m model_name \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhuggingface/llama-7b\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'transformers'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import random\n",
     "import torch\n",
-    "from transformers import LlamaForCausalLM, LlamaTokenizer, pipeline\n",
+    "from transformers import LlamaForCausalLM, LlamaTokenizer, pipeline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Step 1: Request Access\n",
+    "Fill out the form provided by Meta AI (or the entity distributing the LLaMA weights) to request access to the model weights.\n",
     "\n",
-    "model_name = \"huggingface/llama-7b\"\n",
+    "Step 2: Download the Weights\n",
+    "Once you have access, download the weights to a directory on your local machine.\n",
     "\n",
+    "Step 3: Convert the Weights\n",
+    "Use the provided conversion script to convert the weights to the Hugging Face format.\n",
+    "\n",
+    "Here is a detailed guide on how to perform the conversion:\n",
+    "\n",
+    "Prerequisites\n",
+    "Make sure you have Python installed and the transformers library from Hugging Face.\n",
+    "\n",
+    "pip install transformers\n",
+    "Conversion Script\n",
+    "Download the Conversion Script:\n",
+    "The script is part of the Hugging Face Transformers repository. You can find it in the src/transformers/models/llama directory.\n",
+    "\n",
+    "git clone https://github.com/huggingface/transformers\n",
+    "cd transformers\n",
+    "Run the Conversion Script:\n",
+    "Replace /path/to/downloaded/llama/weights with the actual path where you downloaded the LLaMA weights and specify the model size (e.g., 7B).\n",
+    "\n",
+    "python src/transformers/models/llama/convert_llama_weights_to_hf.py \\\n",
+    "    --input_dir /path/to/downloaded/llama/weights \\\n",
+    "    --model_size 7B \\\n",
+    "    --output_dir /path/to/output/directory\n",
+    "\n",
+    "Example\n",
+    "Suppose you downloaded the weights to /home/user/llama_weights and want to convert the 7B model. The command would look like this:\n",
+    "python src/transformers/models/llama/convert_llama_weights_to_hf.py \\\n",
+    "    --input_dir /home/user/llama_weights \\\n",
+    "    --model_size 7B \\\n",
+    "    --output_dir /home/user/llama_hf\n",
+    "\n",
+    "After conversion, you can load the model and tokenizer from the specified output directory using the Hugging Face transformers library"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "An error occurred: llama-7b is not a local folder and is not a valid model identifier listed on 'https://huggingface.co/models'\n",
+      "If this is a private repository, make sure to pass a token having permission to this repo either by logging in with `huggingface-cli login` or by passing `token=<your_token>`\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "model_dir = \"huggingface/llama-7b\" #NOT THE ACTUAL DIRECTORY\n",
     "try:\n",
-    "    tokenizer = LlamaTokenizer.from_pretrained(model_name)\n",
-    "    model = LlamaForCausalLM.from_pretrained(model_name)\n",
+    "    tokenizer = LlamaTokenizer.from_pretrained(model_dir)\n",
+    "    model = LlamaForCausalLM.from_pretrained(model_dir)\n",
     "    print(\"model and tokenizer loaded successfully.\")\n",
     "except Exception as e:\n",
-    "    print(f\"An error occurred: {e}\")\n",
-    "\n",
+    "    print(f\"An error occurred: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "text_generation_pipeline = pipeline(\n",
     "    \"text-generation\",\n",
     "    model=model,\n",
